# hello-world-cmake-kokkos

./: CMakeLists.txt  README.md  main.cpp
